[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset's/mainMenu/play btn.png" type="Texture" id=1]
[ext_resource path="res://script/mainMenu.gd" type="Script" id=2]
[ext_resource path="res://asset's/mainMenu/option.png" type="Texture" id=3]
[ext_resource path="res://asset's/mainMenu/background_img.png" type="Texture" id=5]
[ext_resource path="res://asset's/mainMenu/Smart.png" type="Texture" id=6]
[ext_resource path="res://asset's/img/wheel.png" type="Texture" id=7]

[sub_resource type="Animation" id=6]
resource_name = "Idel"
length = 2.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Button/playBTN:anchor_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.5, 1, 1.5, 1.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 3,
"values": [ 0.5, 0.53, 0.5, 0.47, 0.5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RESET"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Button/playBTN:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button/playBTN:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button/playBTN:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Button/playBTN:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "option"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Button/optBtn:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 25.0 ]
}

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background-image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Button" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="wheel_config" type="Node2D" parent="Button"]
position = Vector2( 309, 428 )
scale = Vector2( 0.188738, 0.185764 )

[node name="Wheel3" type="Sprite" parent="Button/wheel_config"]
position = Vector2( -1308.69, 1114.32 )
scale = Vector2( 1, 1 )
texture = ExtResource( 7 )

[node name="Wheel4" type="Sprite" parent="Button/wheel_config"]
position = Vector2( -1361.68, -2050.99 )
scale = Vector2( 1, 1 )
texture = ExtResource( 7 )

[node name="Wheel5" type="Sprite" parent="Button/wheel_config"]
position = Vector2( 4879.79, -1937.94 )
scale = Vector2( 1, 1 )
texture = ExtResource( 7 )

[node name="playBTN" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -77.0
margin_right = 80.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 80, 77 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="optBtn" type="Button" parent="Button"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -112.0
margin_right = -22.0
margin_bottom = -22.0
rect_pivot_offset = Vector2( 45, 45 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idel = SubResource( 6 )
anims/RESET = SubResource( 5 )
anims/option = SubResource( 4 )

[node name="Smart" type="Sprite" parent="."]
position = Vector2( 650, 151 )
scale = Vector2( 0.73218, 0.698777 )
texture = ExtResource( 6 )

[connection signal="button_down" from="Button/playBTN" to="." method="_on_playBTN_button_down"]
[connection signal="button_up" from="Button/playBTN" to="." method="_on_playBTN_button_up"]
[connection signal="button_up" from="Button/optBtn" to="." method="_on_Button_button_up"]
